# coding-fu

./: .gitignore  README.md
adventofcode/2024/: Makefile  day-01.c  day-02.c  day-03.c  day-04-2.c  day-04.c  day-05.c  day-06.c  day-07.c  day-08.c  day-09.c  day-10.c  day-11-2.c  day-11.c  day-12.c  day-13.c  day-14.c  day-15.c  day-16.c  day-17.c  day-18.c  day-19.c
books/the-gnu-c-tut/: The-gnu-c-tutorial.md
books/unix-progamming-env/: unix-programming-env.md
codecrafters/c/http-server/: .gitignore  CMakeLists.txt  README.md
codecrafters/c/http-server/src/: http.c  http.h  main.c
coding-inteview-university/: README.md  algo-complexity.md  programming-language-resources.md  resource.md
crafting-interpreters/: readme.md
crafting-interpreters/java/: Makefile
crafting-interpreters/python/: lox.py  plox  pylox.py  scanner.py
crafting-interpreters/test/: closure.lox  fact.lox  fib.lox  for-stmt.lox  if-stmt.lox  while-loop.lox
edx/ibm-da0101/: module-1.md  module-2.md  module-3.md  module-4.md  module-5.md
hackerrank/algo/: heap.py  is_bst.py
hackerrank/cisco/: circular.py  divisible-by-8.py  id-remove.py  paint.py
hackerrank/projecteuler/: prelude.rs  prob001.rs
illinois-cs241/ch-01/: hello-file.c  hello-printf.c  hello-stderr.c  hello-world.c
k-and-r-c/chapter-1/: exercise-1-13-a.c  exercise-1-13-b.c
k-and-r-c/chapter-2/: notes.md
k-and-r-c/chapter-3/: notes.md
k-and-r-c/chapter-4/: notes.md
k-and-r-c/chapter-5/: notes.md
python/: tips.md
python/concepts/: cls.py  compile-runtime.py  tdlr.py  tips.md
python/foobar/: maxproduct.py  (+1 more)
(+84 files in other folders)
